--- a/loginSignup/base/templates/prueba_grafica.html
+++ b/loginSignup/base/templates/prueba_grafica.html
@@ -50,6 +50,10 @@
                 <h3>Señal Sierra</h3>
                 <button type="button" id="ejem4">Ver</button>
             </div>
+            <div class="menu-item">
+                <h3>Acciones</h3>
+                <button type="button" id="btn_clear_pulso">Limpiar</button>
+            </div>
         </div>
 
         <!-- Título de la página -->
